Fixed spacing between offers list and footer

--- a/ghost/admin/app/styles/layouts/offers.css
+++ b/ghost/admin/app/styles/layouts/offers.css
@@ -5,6 +5,7 @@
 .gh-offers .view-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding-bottom: 0;
     min-height: calc(100vh - 195px);
 }
